--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,15 @@
 dist: xenial
 language: python
-python:
-  - 3.6
+python: "3.6"
 env:
-  - KERAS_BACKEND=tensorflow TF_KERAS=1 TF_2=1
-  - KERAS_BACKEND=tensorflow TF_KERAS=1 TF_EAGER=1
-  - KERAS_BACKEND=tensorflow TF_KERAS=1
-  - KERAS_BACKEND=tensorflow
-  - KERAS_BACKEND=theano THEANO_FLAGS=optimizer=fast_compile
+  global:
+    - COVERALLS_PARALLEL=true
+  matrix:
+    - KERAS_BACKEND=tensorflow TF_KERAS=1 TF_2=1
+    - KERAS_BACKEND=tensorflow TF_KERAS=1 TF_EAGER=1
+    - KERAS_BACKEND=tensorflow TF_KERAS=1
+    - KERAS_BACKEND=tensorflow
+    - KERAS_BACKEND=theano THEANO_FLAGS=optimizer=fast_compile
 install:
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
   - bash miniconda.sh -b -p $HOME/miniconda
@@ -28,3 +30,6 @@ script:
   - ./test.sh
 after_success:
   coveralls
+notifications:
+  webhooks:
+    - https://coveralls.io/webhook
