--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,8 +1,8 @@
 setuptools>=38.6.0
 twine>=1.11.0
 wheel>=0.31.0
-tensorflow
+tensorflow==1.13.2
 nose
 pycodestyle
 coverage
-keras-rectified-adam
+keras-rectified-adam==0.17.0
